--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,94 +1,78 @@
-    <div class="container">
-      <div class="card text-center">
-        <img src="../shared/images/boris.jpg" alt="Boris Paillard" id="img-profile" class="img-circle">
-        <h1>Boris Paillard</h1>
-        <h2>CEO @Le Wagon</h2>
-
-        <p>
-          After 3 years in financial markets, I got bored and launched Le Wagon. Our mission: <strong>bring technical skills to creative people</strong>.
-        </p>
-
-        <a href="https://lewagon.com" class="btn-red">See for yourself</a>
-      </div>
-
-      <div class="card text-center">
-        <ul class="list-inline">
-          <li class="text-center">
-            <a href="https://www.facebook.com/boris.paillard">
-              <i class="fa fa-facebook"></i> <br>Facebook
-            </a>
-          </li>
-          <li class="text-center">
-            <a href="https://www.linkedin.com/in/boris-paillard-86722670">
-              <i class="fa fa-linkedin"></i> <br>Linkedin
-            </a>
-          </li>
-          <li class="text-center">
-            <a href="https://twitter.com/bpapillard">
-              <i class="fa fa-twitter"></i> <br>Twitter
-            </a>
-          </li>
-        </ul>
-      </div>
-
-      <div class="card text-center">
-        <h2>My Favorite movies</h2>
-        <table id="movies">
-          <tbody>
-            <tr>
-              <td>
-                <img src="../shared/images/space-odyssey.jpg" alt="space odyssey">
-              </td>
-              <td>
-                <h3>2001 - Space Odyssey</h3>
-                <p>Humanity finds a mysterious, obviously artificial, object buried beneath the Lunar surface and, with the intelligent computer H.A.L. 9000, sets off on a quest.</p>
-              </td>
-            </tr>
-            <tr>
-              <td>
-                <img src="../shared/images/monsieur-hulot.jpg" alt="monsieur hulot">
-              </td>
-              <td>
-                <h3>Monsieur Hulot</h3>
-                <p>Monsieur Hulot comes to a beachside hotel for a vacation, where he accidentally (but good-naturedly) causes havoc.</p>
-              </td>
-            </tr>
-            <tr>
-              <td>
-                <img src="../shared/images/alien.jpg" alt="alien">
-              </td>
-              <td>
-                <h3>Alien</h3>
-                <p>The commercial vessel Nostromo receives a distress call from an unexplored planet. After searching for survivors, the crew heads home only to realize that a deadly bioform has joined them.</p>
-              </td>
-            </tr>
-          </tbody>
-        </table>
-      </div>
-
-      <div class="card text-center">
-        <h2>About this page</h2>
-        This page has been coded during the <a href="https://lewagon.org/program" target="_blank">FullStack program @LeWagon</a>. That was probably the best experience of my entire life.
-        <ul class="list-inline">
-         <li>
-           <a href="#">
-             <i class="fa fa-heart"></i>
-           </a>
-         </li>
-         <li>
-           <a href="#">
-             <i class="fa fa-share"></i>
-           </a>
-         </li>
-         <li>
-           <a href="#">
-             <i class="fa fa-star"></i>
-           </a>
-         </li>
-        </ul>
+    <div class="profile-header-wrapper">
+      <div class="container profile-header-container text-center">
+        <div class="profile-header-infos">
+          <img src="images/papillard.jpeg" alt="">
+          <h1> user's name </h1>
+          <h2> user's title? </h2>
+        </div>
+        <div class="tabs">
+          <a class="tab active" href="#">
+            <h3>8</h3>
+            <p>current projects</p>
+          </a>
+          <a class="tab" href="#">
+            <h3>27</h3>
+            <p>working collaborators</p>
+          </a>
+          <a class="tab" href="#">
+            <h3>54</h3>
+            <p>reviews</p>
+          </a>
+          <a class="tab" href="#">
+            <h3>13</h3>
+            <p>something else</p>
+          </a>
+        </div>
       </div>
     </div>
 
-  </body>
-</html>
-
+    <div class="container">
+      <div class="product">
+        <div class='product-upvote'>
+          <div class="product-arrow"></div>
+          <div class='product-count'>95</div>
+        </div>
+        <img src="shared/card" alt="" class="product-image">
+        <div class='product-body'>
+          <h3><%= project.title %></h3>
+          <p><%= project.description %></p>
+        </div>
+        <ul class="list-inline product-controls">
+          <li><a href=""><i class="fa fa-heart"></i></a></li>
+          <li><a href=""><i class="fa fa-share"></i></a></li>
+          <li><a href=""><i class="fa fa-star"></i></a></li>
+        </ul>
+      </div>
+      <div class="product">
+        <div class='product-upvote'>
+          <div class="product-arrow"></div>
+          <div class='product-count'>67</div>
+        </div>
+        <img src="shared/card" alt="" class="product-image">
+        <div class='product-body'>
+          <h3><%= project.title %></h3>
+          <p><%= project.description %></p>
+        </div>
+        <ul class="list-inline product-controls">
+          <li><a href=""><i class="fa fa-heart"></i></a></li>
+          <li><a href=""><i class="fa fa-share"></i></a></li>
+          <li><a href=""><i class="fa fa-star"></i></a></li>
+        </ul>
+      </div>
+      <div class="product">
+        <div class='product-upvote'>
+          <div class="product-arrow"></div>
+          <div class='product-count'>55</div>
+        </div>
+        <img src="shared/card" alt="" class="product-image">
+        <div class='product-body'>
+          <h3><%= project.title %></h3>
+          <p><%= project.description %></p>
+        </div>
+        <ul class="list-inline product-controls">
+          <li><a href=""><i class="fa fa-heart"></i></a></li>
+          <li><a href=""><i class="fa fa-share"></i></a></li>
+          <li><a href=""><i class="fa fa-star"></i></a></li>
+        </ul>
+      </div>
+    </div>
