--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -16,12 +16,12 @@
     <%= f.input :projected_budget, input_html: { placeholder: "", class: 'form-control' } %>
     <%= f.input :status, collection: [ "Stand by", "Pending Ok", "Pending Blocked", "Closed", "Adandonned", "Completed"], input_html: {  class: 'form-control' } %>
     <%= simple_fields_for :generate do |o| %>
-      <%= o.input :type, collection: [ "Building a Villa", "Remodeling an Apartment"], input_html: {  class: 'form-control' } %>
+      <%= o.input :value, collection: [ "Building a Villa", "Remodeling an Apartment"], input_html: {  class: 'form-control' } %>
     <% end %>
     <%= f.input :start_date, input_html: { placeholder: "", class: 'form-control' } %>
     <%= f.input :end_date, input_html: { placeholder: "", class: 'form-control' } %>
   </div>
-
+    <%= f.input :specialties, as: :check_boxes, collection: Specialty::SPECIALTIES %>
   <div class="form-actions">
     <%= f.submit class: "btn btn-success" %>
   </div>
